:recycle: 리스트 관련 Stream 메서드로 교체 #406